# Spring2026-CompanyB

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: deployment.yml  integration.yml
group_specific_content/: TeamAgreement.md
group_specific_content/Group-11/: GroupSpecs.md  action_map.md  behaviortree.md  function_set.md  group_11_agreement.md  module_vision.md  path_generator.md  world_path.md
group_specific_content/Group-12/: Group-12-agreement.md  GroupSpecs.md
group_specific_content/Group-20/: Group_Agreement.md
group_specific_content/Group-21/: ClassWriteups_ModuleProposal.md
scripts/: docker-entrypoint.sh
source/: CMakeLists.txt  simple_main.cpp
source/Agents/: PacingAgent.hpp
source/Interfaces/: TrashInterface.hpp
source/Worlds/: MazeWorld.hpp
source/core/: AgentBase.hpp  Entity.hpp  InterfaceBase.hpp  ItemBase.hpp  Location.hpp  WorldBase.hpp  WorldGrid.hpp  WorldPosition.hpp
source/tools/: io_utils.hpp
tests/: test_io_utils.cpp
